# fasttls

./: .gitignore  Cargo.toml  Makefile  client.go  client_test.go  connection.go  fasttls.go  fasttls.h  fasttls.h-e  fasttls.h.in  fasttls.pc  fasttls.pc-e  fasttls.pc.in  fasttls_default.go  fasttls_ktls.go  fasttls_rustls.go  fasttls_test.go  go.mod  go.sum  main.go  server.go  server_test.go  session.go  session_test.go
internal/testpki/: testpki.go
pkg/client/: client.go  client_test.go
pkg/connection/: connection.go
pkg/ktls/: connection.go  ktls.go
pkg/server/: server.go  server_test.go
pkg/session/: session.go
pkg/std/: std.go
src/: cipher.rs  config.rs  constants.rs  crypto.rs  errors.rs  ffi.rs  handshake.rs  lib.rs  session.rs  testpki.rs  utils.rs
