[package]
name = "fasttls"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.2"
pretty-hex = "0.4.0"
rustls = "0.22.0"
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.0.1"
rustls-webpki = "0.101.6"
tls-parser = "0.11.0"
nom = "7.1.3"
rcgen = "0.11.3"
webpki-roots = "0.26.0"
